# mcp-data-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.bat  start-backend.bat  start-backend.sh  start-frontend.bat
backend/: .env.example  main.py
backend/core/: config.py  logger.py
backend/core/prompts/: __init__.py  database_protocol.txt  system_prompt.txt  tools_instructions.txt
backend/mcp/: server.py
backend/mcp/tools/: db_tool.py  file_tool.py
data/: .gitkeep
frontend/: api_client.py  app.py
frontend/components/: chat_ui.py  sidebar.py
